Changes
***********************************************

UP
=====

    - support symlink in remove_path (API)
    - enhance remove_path function
    - fix a bug in bootstrapping buildout
    - rewrite fetchers
    - improve proxy handling
    - fix some tests
    - make parts shut up
    - test incomplete downloads and redownload them (package level)
    - make minibuild name more permissive
    - win32 compatibility
    - fix bug in new checkouts
    - add replace/per/os/dependencies mecanism
    - fix a bug insde the get_from_cache helper when a fragmented url is used and the upstream server does not understand them
    - add a special exception for search_latest when error happen.
    - fake user agent in urlopen calls to prevent mad sysadmins restrictions on python useragent.

1.0.19
===========

    - distribute fix

1.0.18
========

    - remove deprecationwarning

1.0.17
=========

    - remove deprecationwarning

1.0.16
=======


    - oups, left print

1.0.15
========

    - let the default minilay be at lower priority among all

1.0.14
=======

    - desactivating updates manager for more tests.

-> 1.0.13
==========

    - Minitage now allows binaries to be used instead of compiling programs,
      in the gentoo -k way.
    - Minitage has now also an update manager to run udpate functions on
      upgrade.

1.0.5
=======

    - bugfix on url md5sum fragments

1.0.4
=========

    - make conditionnal weither we are offline or not the download in the get_from_cache function.

1.0.0 -> 1.0.3
==================

    - x64 enlightments
    - add optionnal force switch to the download cache function


1.0
=====

    - some API adds like 'search_latest' and 'which'
    - bugfix in interfaces for configuration handling
    - buildout maker can be given an optionnal config to build
    - code stabilization and sync with other minitage components
    - official documentation on http://www.minitage.org


0.32
=====

    - Fetch by default over http

0.4.30
========